--- a/app/src/main/res/layout/key_layout_normal.xml
+++ b/app/src/main/res/layout/key_layout_normal.xml
@@ -52,7 +52,7 @@
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:onClick="@{() -> kbviewmodel.changeMode(7)}"
-                android:src="@drawable/ic_boilerplatetext_black" />
+                android:src="@{kbviewmodel.mode==7 ? @drawable/ic_keyboard_black : @drawable/ic_boilerplatetext_black}" />
 
             <ImageButton
                 android:id="@+id/selectAll"
@@ -102,7 +102,7 @@
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:onClick="@{() -> kbviewmodel.changeMode(8)}"
-                android:src="@drawable/ic_move" />
+                android:src="@{kbviewmodel.mode==8 ? @drawable/ic_keyboard_black : @drawable/ic_move}" />
 
             <ImageButton
                 android:id="@+id/numberKeypadButton"
@@ -112,7 +112,7 @@
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:onClick="@{() -> kbviewmodel.changeMode(9)}"
-                android:src="@drawable/ic_number_keypad" />
+                android:src="@{kbviewmodel.mode==9 ? @drawable/ic_keyboard_black : @drawable/ic_number_keypad}" />
         </LinearLayout>
 
         <RelativeLayout
@@ -169,8 +169,9 @@
                         app:customTheme_padding="@{kbviewmodel.observeHeight}"
                         app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
                         app:customTheme_view="@{2}"
-                        app:fontType="@{kbviewmodel.observeKBFontType}"
-                        app:onTouch="@{kbservice.repeatListenerChars[111]}" />
+                        app:customFontStyle="@{kbviewmodel.observeKBFontType}"
+                        app:fontBold="@{kbviewmodel.mode}"
+                        app:onTouch="@{kbservice.repeatListenerSpecials[23]}" />
 
                     <Button
                         android:id="@+id/btn2"
@@ -183,8 +184,9 @@
                         app:customTheme_padding="@{kbviewmodel.observeHeight}"
                         app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
                         app:customTheme_view="@{2}"
-                        app:fontType="@{kbviewmodel.observeKBFontType}"
-                        app:onTouch="@{kbservice.repeatListenerChars[112]}" />
+                        app:customFontStyle="@{kbviewmodel.observeKBFontType}"
+                        app:fontBold="@{kbviewmodel.mode}"
+                        app:onTouch="@{kbservice.repeatListenerSpecials[24]}" />
 
                     <Button
                         android:id="@+id/btn3"
@@ -197,8 +199,9 @@
                         app:customTheme_padding="@{kbviewmodel.observeHeight}"
                         app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
                         app:customTheme_view="@{2}"
-                        app:fontType="@{kbviewmodel.observeKBFontType}"
-                        app:onTouch="@{kbservice.repeatListenerChars[113]}" />
+                        app:customFontStyle="@{kbviewmodel.observeKBFontType}"
+                        app:fontBold="@{kbviewmodel.mode}"
+                        app:onTouch="@{kbservice.repeatListenerSpecials[25]}" />
 
                     <Button
                         android:id="@+id/btn4"
@@ -211,8 +214,9 @@
                         app:customTheme_padding="@{kbviewmodel.observeHeight}"
                         app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
                         app:customTheme_view="@{2}"
-                        app:fontType="@{kbviewmodel.observeKBFontType}"
-                        app:onTouch="@{kbservice.repeatListenerChars[114]}" />
+                        app:customFontStyle="@{kbviewmodel.observeKBFontType}"
+                        app:fontBold="@{kbviewmodel.mode}"
+                        app:onTouch="@{kbservice.repeatListenerSpecials[26]}" />
 
                     <Button
                         android:id="@+id/btn5"
@@ -225,8 +229,9 @@
                         app:customTheme_padding="@{kbviewmodel.observeHeight}"
                         app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
                         app:customTheme_view="@{2}"
-                        app:fontType="@{kbviewmodel.observeKBFontType}"
-                        app:onTouch="@{kbservice.repeatListenerChars[115]}" />
+                        app:customFontStyle="@{kbviewmodel.observeKBFontType}"
+                        app:fontBold="@{kbviewmodel.mode}"
+                        app:onTouch="@{kbservice.repeatListenerSpecials[27]}" />
 
                     <Button
                         android:id="@+id/btn6"
@@ -239,8 +244,9 @@
                         app:customTheme_padding="@{kbviewmodel.observeHeight}"
                         app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
                         app:customTheme_view="@{2}"
-                        app:fontType="@{kbviewmodel.observeKBFontType}"
-                        app:onTouch="@{kbservice.repeatListenerChars[116]}" />
+                        app:customFontStyle="@{kbviewmodel.observeKBFontType}"
+                        app:fontBold="@{kbviewmodel.mode}"
+                        app:onTouch="@{kbservice.repeatListenerSpecials[28]}" />
 
                     <Button
                         android:id="@+id/btn7"
@@ -253,8 +259,9 @@
                         app:customTheme_padding="@{kbviewmodel.observeHeight}"
                         app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
                         app:customTheme_view="@{2}"
-                        app:fontType="@{kbviewmodel.observeKBFontType}"
-                        app:onTouch="@{kbservice.repeatListenerChars[117]}" />
+                        app:customFontStyle="@{kbviewmodel.observeKBFontType}"
+                        app:fontBold="@{kbviewmodel.mode}"
+                        app:onTouch="@{kbservice.repeatListenerSpecials[29]}" />
 
                     <Button
                         android:id="@+id/btn8"
@@ -267,8 +274,9 @@
                         app:customTheme_padding="@{kbviewmodel.observeHeight}"
                         app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
                         app:customTheme_view="@{2}"
-                        app:fontType="@{kbviewmodel.observeKBFontType}"
-                        app:onTouch="@{kbservice.repeatListenerChars[118]}" />
+                        app:customFontStyle="@{kbviewmodel.observeKBFontType}"
+                        app:fontBold="@{kbviewmodel.mode}"
+                        app:onTouch="@{kbservice.repeatListenerSpecials[30]}" />
 
                     <Button
                         android:id="@+id/btn9"
@@ -281,8 +289,9 @@
                         app:customTheme_padding="@{kbviewmodel.observeHeight}"
                         app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
                         app:customTheme_view="@{2}"
-                        app:fontType="@{kbviewmodel.observeKBFontType}"
-                        app:onTouch="@{kbservice.repeatListenerChars[119]}" />
+                        app:customFontStyle="@{kbviewmodel.observeKBFontType}"
+                        app:fontBold="@{kbviewmodel.mode}"
+                        app:onTouch="@{kbservice.repeatListenerSpecials[31]}" />
 
                     <Button
                         android:id="@+id/btn0"
@@ -295,8 +304,9 @@
                         app:customTheme_padding="@{kbviewmodel.observeHeight}"
                         app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
                         app:customTheme_view="@{2}"
-                        app:fontType="@{kbviewmodel.observeKBFontType}"
-                        app:onTouch="@{kbservice.repeatListenerChars[120]}" />
+                        app:customFontStyle="@{kbviewmodel.observeKBFontType}"
+                        app:fontBold="@{kbviewmodel.mode}"
+                        app:onTouch="@{kbservice.repeatListenerSpecials[32]}" />
 
                     <Button
                         android:id="@+id/keyboardNumberRightMargin"
